[tool.poetry]
name = "postprocess"
version = "0.1.0"
description = ""
authors = ["Kerry <ksklemmer@gmail.com>"]
license = "MIT"
packages = [{ include = "postprocess" }]

[tool.poetry.dependencies]
numpy = "=1.26.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
